cicd/10_k8s_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: tekton-sample-python
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: tekton-python
  template: 
    metadata: 
      name: tekton-sample-python
      labels: 
        app: tekton-sample-python
    spec:
      containers: 
      - name: tekton-sample-python
        image: changetagname
        # image: cocopopo/tekton-sample:v4
        ports:
        - containerPort: 80
      ### 아래를 추가한다
      imagePullSecrets:
      - name: docker-credentials
